https://github.com/yzb117/yzbhomework.git

--- a/第6次作业/lv2.3.html
+++ b/第6次作业/lv2.3.html
@@ -62,7 +62,8 @@
             text.value='';
             }
         })
-        content.addEventListener('mouseup',function(){
+        content.addEventListener('contextmenu',function(e){
+            e.preventDefault();
             content.style.display='none';
         })
 
